[package]
name = "solana_liq_arb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive", "env"] }
bs58 = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
shellexpand = "3"

# Solana + SPL
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-pubkey = "2.4.0"
spl-associated-token-account = { version = "7.0", default-features = false, features = ["no-entrypoint"] }
spl-token = { version = "8.0", default-features = false, features = ["no-entrypoint"] }

# Instruction builders / decoders
carbon-raydium-clmm-decoder = "0.11"
carbon-core = "0.11"

# Yellowstone gRPC (QuickNode)
yellowstone-grpc-client = "6.0"
yellowstone-grpc-proto = { version = "6.0", default-features = false, features = ["tonic", "tonic-compression"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
